--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,34 @@
-# Logs
-logs
-*.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+/dist
+/dist-ssr
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# local env files
+.env
+.env*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,5 +40,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# vercel
 .vercel
-.env
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
