show usdc token

--- a/env.example
+++ b/env.example
@@ -7,5 +7,6 @@
 # Then convert to JSON array format for this env var
 AUTHORITY_PRIVATE_KEY=
 
-# GBPL Token Configuration
+# Token Configuration
 VITE_GBPL_MINT_ADDRESS=
+VITE_USDC_MINT_ADDRESS=
