purchase and redeem

--- a/env.example
+++ b/env.example
@@ -10,3 +10,12 @@ AUTHORITY_PRIVATE_KEY=
 # Token Configuration
 VITE_GBPL_MINT_ADDRESS=
 VITE_USDC_MINT_ADDRESS=
+
+# Vault Configuration
+VITE_USDC_VAULT_TOKEN_ACCOUNT=
+VITE_GBPL_VAULT_TOKEN_ACCOUNT=
+
+# Upstash Redis (for duplicate prevention)
+# Get from https://console.upstash.com/
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
