--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "description": "GBPL Token implementation using Token-2022",
   "dependencies": {
     "@heroui/button": "2.2.27",
+    "@heroui/card": "^2.2.25",
     "@heroui/code": "2.2.21",
     "@heroui/dropdown": "2.3.27",
     "@heroui/image": "^2.2.17",
     "@heroui/input": "2.4.28",
     "@heroui/kbd": "2.2.22",
     "@heroui/link": "2.2.23",
+    "@heroui/listbox": "^2.3.26",
+    "@heroui/modal": "^2.2.24",
     "@heroui/navbar": "2.2.25",
     "@heroui/snippet": "2.2.28",
     "@heroui/switch": "2.2.24",
@@ -29,6 +32,7 @@
     "@solana/react": "^5.0.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
+    "@upstash/redis": "^1.35.6",
     "@wallet-standard/core": "^1.1.1",
     "@wallet-standard/react": "^1.0.1",
     "clsx": "2.1.1",
@@ -51,6 +55,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
+    "@vercel/node": "^5.5.0",
     "@vitejs/plugin-react": "4.7.0",
     "eslint": "9.25.1",
     "eslint-config-prettier": "9.1.0",
@@ -65,6 +70,7 @@
     "postcss": "8.5.6",
     "prettier": "3.5.3",
     "typescript": "5.6.3",
+    "vercel": "^48.6.0",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4"
   },
@@ -80,6 +86,7 @@
     "update:meta": "tsx scripts/update-meta.ts",
     "install:dev": "pnpm install",
     "dev": "vite",
+    "vercel:dev": "vercel dev",
     "build": "tsc && vite build",
     "lint": "eslint --fix",
     "preview": "vite preview"
