Bitcoin Dual staking mock.

--- a/env.example
+++ b/env.example
@@ -19,3 +19,7 @@ VITE_GBPL_VAULT_TOKEN_ACCOUNT=
 # Get from https://console.upstash.com/
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+
+# Dynamic Labs Configuration
+# Get from https://app.dynamic.xyz/
+VITE_DYNAMIC_ENVIRONMENT_ID=
