--- a/package.json
+++ b/package.json
@@ -5,23 +5,20 @@
   "type": "module",
   "description": "GBPL Token implementation using Token-2022",
   "dependencies": {
+    "@dynamic-labs/bitcoin": "^4.40.1",
+    "@dynamic-labs/sdk-react-core": "^4.40.1",
     "@heroui/button": "2.2.27",
     "@heroui/card": "^2.2.25",
-    "@heroui/code": "2.2.21",
+    "@heroui/divider": "^2.2.20",
     "@heroui/dropdown": "2.3.27",
     "@heroui/image": "^2.2.17",
     "@heroui/input": "2.4.28",
-    "@heroui/kbd": "2.2.22",
     "@heroui/link": "2.2.23",
     "@heroui/listbox": "^2.3.26",
     "@heroui/modal": "^2.2.24",
     "@heroui/navbar": "2.2.25",
-    "@heroui/snippet": "2.2.28",
-    "@heroui/switch": "2.2.24",
     "@heroui/system": "2.4.23",
-    "@heroui/theme": "2.4.23",
     "@heroui/toast": "^2.0.17",
-    "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.28",
     "@react-types/shared": "3.32.1",
     "@solana-program/memo": "^0.9.0",
@@ -35,6 +32,7 @@
     "@upstash/redis": "^1.35.6",
     "@wallet-standard/core": "^1.1.1",
     "@wallet-standard/react": "^1.0.1",
+    "bitcoin-address-validation": "^3.0.0",
     "clsx": "2.1.1",
     "debug": "^4.4.3",
     "dotenv": "^17.2.3",
