update tech design in readme, stake gbpl implementation

--- a/env.example
+++ b/env.example
@@ -2,10 +2,20 @@
 # SOLANA_RPC_URL=https://api.devnet.solana.com
 # SOLANA_WS_URL=wss://api.devnet.solana.com
 
-# Authority Keypair (JSON array format)
+# Solana Authority Keypair (JSON array format)
 # Generate with: solana-keygen new --outfile ~/gbpl-authority.json
 # Then convert to JSON array format for this env var
 AUTHORITY_PRIVATE_KEY=
+
+# BITCOIN_KEY is the root private key for Bitcoin operations.
+# This key is used by the backend coordinator for signing and creating HTLCs (Hash Time-Locked Contracts) on the Bitcoin network.
+# Store this securely and never share or commit your actual private key!
+BITCOIN_KEY=
+
+# Preimage Encryption Key (32 bytes, hex format or UTF-8 string)
+# Generate a secure key: openssl rand -hex 32
+# This key is used to encrypt HTLC preimages stored in Redis
+PREIMAGE_ENCRYPTION_KEY=
 
 # Token Configuration
 VITE_GBPL_MINT_ADDRESS=
@@ -15,8 +25,8 @@ VITE_USDC_MINT_ADDRESS=
 VITE_USDC_VAULT_TOKEN_ACCOUNT=
 VITE_GBPL_VAULT_TOKEN_ACCOUNT=
 
-# Upstash Redis (for duplicate prevention)
-# Get from https://console.upstash.com/
+# Upstash Redis (for duplicate prevention and encrypted preimage storage)
+# Get from vercel or https://console.upstash.com/
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 
