--- a/package.json
+++ b/package.json
@@ -8,20 +8,7 @@
     "@dynamic-labs/bitcoin": "^4.40.1",
     "@dynamic-labs/sdk-react-core": "^4.40.1",
     "@fontsource/inter": "^5.2.8",
-    "@heroui/button": "2.2.27",
-    "@heroui/card": "^2.2.25",
-    "@heroui/divider": "^2.2.20",
-    "@heroui/dropdown": "2.3.27",
-    "@heroui/image": "^2.2.17",
-    "@heroui/input": "2.4.28",
-    "@heroui/link": "2.2.23",
-    "@heroui/listbox": "^2.3.26",
-    "@heroui/modal": "^2.2.24",
-    "@heroui/navbar": "2.2.25",
-    "@heroui/radio": "^2.3.27",
-    "@heroui/system": "2.4.23",
-    "@heroui/theme": "^2.4.23",
-    "@heroui/toast": "^2.0.17",
+    "@heroui/react": "^2.4.23",
     "@react-aria/visually-hidden": "3.8.28",
     "@react-types/shared": "3.32.1",
     "@solana-program/memo": "^0.9.0",
@@ -29,7 +16,7 @@
     "@solana-program/token": "^0.7.0",
     "@solana-program/token-2022": "^0.6.0",
     "@solana/kit": "^4.0.0",
-    "@solana/react": "^5.0.0",
+    "@solana/react": "^4.0.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
     "@upstash/redis": "^1.35.6",
