initial deposit tx

--- a/env.example
+++ b/env.example
@@ -12,6 +12,9 @@ AUTHORITY_PRIVATE_KEY=
 # Store this securely and never share or commit your actual private key!
 BITCOIN_KEY=
 
+# Bitcoin network, default to testnet4
+VITE_BTC_NETWORK=
+
 # Preimage Encryption Key (32 bytes, hex format or UTF-8 string)
 # Generate a secure key: openssl rand -hex 32
 # This key is used to encrypt HTLC preimages stored in Redis
