--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "description": "GBPL Token implementation using Token-2022",
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.2.0",
     "@dynamic-labs/bitcoin": "^4.40.1",
     "@dynamic-labs/sdk-react-core": "^4.40.1",
     "@fontsource/inter": "^5.2.8",
     "@heroui/react": "^2.4.23",
+    "@noble/hashes": "^2.0.1",
     "@react-aria/visually-hidden": "3.8.28",
     "@react-types/shared": "3.32.1",
+    "@scure/base": "^2.0.0",
+    "@scure/btc-signer": "^2.0.1",
     "@solana-program/memo": "^0.9.0",
     "@solana-program/system": "^0.9.0",
     "@solana-program/token": "^0.7.0",
@@ -22,6 +26,7 @@
     "@upstash/redis": "^1.35.6",
     "@wallet-standard/core": "^1.1.1",
     "@wallet-standard/react": "^1.0.1",
+    "bip32": "^5.0.0",
     "bitcoin-address-validation": "^3.0.0",
     "clsx": "2.1.1",
     "debug": "^4.4.3",
